# rinha-backend-2024

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
src/: server.py
src/domain/: account.py  app_state.py  transactions.py
src/routes/: base.py  clients_get_balance.py  clients_post_transaction.py  hello_world.py
