[tool.poetry]
name = "rinha-backend"
version = "0.1.0"
description = ""
authors = ["Pedro Augusto Barbosa Aparecido <pedroaugustobarosa@inatel.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
